--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "hexlet",
   "version": "1.0.0",
+  "type": "module",
   "description": "мой первый npm init",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type": "module",
+    "type": "git",
     "url": "git+https://github.com/g4mburg/hexlet-js.git"
   },
   "author": "g4mburg",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/g4mburg/hexlet-js/issues"
   },
-  "homepage": "https://github.com/g4mburg/hexlet-js#readme"
+  "homepage": "https://github.com/g4mburg/hexlet-js#readme",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
